[gd_scene load_steps=4 format=3 uid="uid://cidwtshsgv7t"]

[ext_resource type="Script" uid="uid://d4d5bkjgo8b31" path="res://scenes/Tools/tool_base.gd" id="1_pnqwb"]
[ext_resource type="Shader" uid="uid://6mnk3xsxqfhc" path="res://shaders/outline.gdshader" id="2_jb3ht"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0saal"]
resource_local_to_scene = true
shader = ExtResource("2_jb3ht")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.50000007125
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(1, 1)
shader_parameter/outline_on = false

[node name="ToolBase" type="Area2D" groups=["draggable_items"]]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_pnqwb")
clean_power = 1.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_0saal")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
